# pandoc-codeblock-include

./: .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pandoc_codeblock_include.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  usage.md
docs/images/: pandoc-codeblock-include-sample.txt
pandoc_codeblock_include/: __init__.py  _main.py
tests/: content1.md  content2.md  content3.md  content4.md  content5.md  expected1.md  expected2.md  expected3.md  expected4.md  expected5.md  expected6.md  helper.py  lorem  non-utf-8  test_include.py
